src/main/java/com/example/appointment_scheduler/error/AppointmentAlreadyBookedException.java
package com.example.appointment_scheduler.error;

public class AppointmentAlreadyBookedException extends Exception{
    public AppointmentAlreadyBookedException(String message) {
        super(message);
    }
    
}